// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component renders correctly with custom props 1`] = `
<button
  class="inline-flex rounded-xl font-medium uppercase flex gap-2 w-max items-center hover:opacity-80 active:shadow-buttonActive cursor-pointer disabled:opacity-60 bg-shadow-color rounded-lg px-6 py-3 text-lg bg-primary extra-class"
  type="button"
>
  <span
    class="inline-flex rounded-xl font-medium uppercase flex gap-2 w-max items-center hover:opacity-80 active:shadow-buttonActive cursor-pointer disabled:opacity-60 bg-shadow-color rounded-lg px-6 py-3 text-lg bg-primary extra-class"
  >
    <span>
      Left Icon
    </span>
  </span>
  Click me
  <span
    class="inline-flex rounded-xl font-medium uppercase flex gap-2 w-max items-center hover:opacity-80 active:shadow-buttonActive cursor-pointer disabled:opacity-60 bg-shadow-color rounded-lg px-6 py-3 text-lg bg-primary extra-class"
  >
    <span>
      Right Icon
    </span>
  </span>
</button>
`;

exports[`Button Component renders correctly with default props 1`] = `
<button
  class="inline-flex rounded-xl font-medium uppercase flex gap-2 w-max items-center hover:opacity-80 active:shadow-buttonActive cursor-pointer disabled:opacity-60  bg-blue-600 hover:bg-blue-700 border-blue-600 border hover:border-blue-700 px-4 py-2 text-base"
  type="button"
>
  Click me
</button>
`;

exports[`Button component snap shot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class=""
        type="button"
      >
        Click me
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class=""
      type="button"
    >
      Click me
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
